Moved probe control upgrades earlier

--- a/GameData/KerbalizedTechTree/Patches/ProbeControl.cfg
+++ b/GameData/KerbalizedTechTree/Patches/ProbeControl.cfg
@@ -15,7 +15,7 @@
 		{
 			UPGRADE {
 				name__ = ProbecoreRetroProgradeHold
-				techRequired__ = kerbalized_level2_probes
+				techRequired__ = kerbalized_level1_probes
 				SASServiceLevel = 1
 			}
 			UPGRADE {
@@ -25,7 +25,7 @@
 			}
 			UPGRADE {
 				name__ = ProbecoreTargetManuverHold
-				techRequired__ = kerbalized_level5_probes
+				techRequired__ = kerbalized_level4_probes
 				SASServiceLevel = 4
 			}
 		}
@@ -37,7 +37,7 @@
 		{
 			UPGRADE {
 				name__ = ProbecoreRetroProgradeHold
-				techRequired__ = kerbalized_level2_probes
+				techRequired__ = kerbalized_level1_probes
 				IsAdditiveUpgrade__ = False
 				PartStats
 				{
@@ -55,7 +55,7 @@
 			}
 			UPGRADE {
 				name__ = ProbecoreTargetManuverHold
-				techRequired__ = kerbalized_level5_probes
+				techRequired__ = kerbalized_level4_probes
 				IsAdditiveUpgrade__ = False
 				PartStats
 				{
@@ -70,7 +70,7 @@ PARTUPGRADE
 {
 	name = ProbecoreRetroProgradeHold
 	partIcon = probeCoreSphere_v2
-	techRequired = kerbalized_level2_probes
+	techRequired = kerbalized_level1_probes
 	entryCost = 10000
 	title = Probe core prograde and retrograde hold
 	description = All probe cores now have prograde and retrograde hold
@@ -93,5 +93,5 @@ PARTUPGRADE
 	techRequired = kerbalized_level4_probes
 	entryCost = 50000
 	title = Probe core manuver and target hold
-	description = All probe cores now have maximum control level
+	description = All probe cores now have maximum SAS level
 }
