Configured fan blades and shrouds

--- a/GameData/KerbalizedTechTree/Compatibility/SquadExpansionSerenity/TechRequired.cfg
+++ b/GameData/KerbalizedTechTree/Compatibility/SquadExpansionSerenity/TechRequired.cfg
@@ -15,17 +15,27 @@
 	@TechRequired = kerbalized_level1_propengines
 }
 
+@PART[smallFanBlade]:FINAL
+{
+	@TechRequired = kerbalized_level1_propengines
+}
+
 @PART[mediumPropeller]:FINAL
 {
 	@TechRequired = kerbalized_level1_propengines
 }
 
-@PART[largePropeller]:FINAL
+@PART[mediumFanBlade]:FINAL
 {
 	@TechRequired = kerbalized_level1_propengines
 }
 
 @PART[FanShroud_01]:FINAL
+{
+	@TechRequired = kerbalized_level1_propengines
+}
+
+@PART[FanShroud_02]:FINAL
 {
 	@TechRequired = kerbalized_level1_propengines
 }
@@ -38,6 +48,21 @@
 @PART[noseconeTiny]:FINAL
 {
 	@TechRequired = kerbalized_level1_propengines
+}
+
+@PART[FanShroud_03]:FINAL
+{
+	@TechRequired = kerbalized_level2_propengines
+}
+
+@PART[largePropeller]:FINAL
+{
+	@TechRequired = kerbalized_level2_propengines
+}
+
+@PART[largeFanBlade]:FINAL
+{
+	@TechRequired = kerbalized_level2_propengines
 }
 
 @PART[RotorEngine_02]:FINAL
