Configured Most 1.875m parts and the large rotors

--- a/GameData/KerbalizedTechTree/Compatibility/ReStockPlus/TechRequired.cfg
+++ b/GameData/KerbalizedTechTree/Compatibility/ReStockPlus/TechRequired.cfg
@@ -17,6 +17,16 @@
 	@TechRequired = kerbalized_level1_crewedspaceflight
 }
 
+@PART[restock-mk2-pod]:FINAL
+{
+	@TechRequired = kerbalized_level2_crewedspaceflight
+}
+
+@PART[restock-pod-sphere-2]:FINAL
+{
+	@TechRequired = kerbalized_level2_crewedspaceflight
+}
+
 // Communication
 
 @PART[restock-relay-radial-2_v2]:FINAL
@@ -44,6 +54,11 @@
 @PART[restock-rcs-block-multi-mini-2]:FINAL
 {
 	@TechRequired = kerbalized_level2_rcs
+}
+
+@PART[restock-rcs-block-multi-2]:FINAL
+{
+	@TechRequired = kerbalized_level3_rcs
 }
 
 // Coupling
@@ -95,6 +110,16 @@
 @PART[restock-engine-ursa-1]:FINAL
 {
 	@TechRequired = kerbalized_level5_rocketry
+}
+
+@PART[restock-engine-galleon-1]:FINAL
+{
+	@TechRequired = kerbalized_level6_rocketry
+}
+
+@PART[restock-engine-schnauzer-1]:FINAL
+{
+	@TechRequired = kerbalized_level6_rocketry
 }
 
 @PART[restock-engine-les-2]:FINAL
@@ -156,12 +181,57 @@
 	@TechRequired = kerbalized_level3_materials
 }
 
-// Tanks
-
-@PART[restock-fueltank-sphere-0625-1]:FINAL
+@PART[restock-fairing-base-1875-1]:FINAL
 {
-	@TechRequired = kerbalized_level2_rocketry
+	@TechRequired = kerbalized_level4_materials
 }
+
+@PART[restock-engineplate-1875-1]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
+
+@PART[restock-service-bay-1875-1]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
+
+@PART[restock-service-module-1875-1]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
+
+@PART[restock-structural-tube-1875-1]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
+
+@PART[restock-decoupler-1875-1]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
+
+@PART[restock-decoupler-1875-truss-1]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
+
+@PART[restock-separator-1875-1]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
+
+@PART[restock-adapter-1875-125-1]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
+
+@PART[restock-nosecone-1875-2]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
+
+// Tanks
 
 @PART[restock-fuel-tank-0625-1]:FINAL
 {
@@ -193,9 +263,14 @@
 	@TechRequired = kerbalized_level1_lfotanks
 }
 
+@PART[restock-fueltank-sphere-0625-1]:FINAL
+{
+	@TechRequired = kerbalized_level1_lfotanks
+}
+
 @PART[restock-fueltank-sphere-125-1]:FINAL
 {
-	@TechRequired = kerbalized_level2_lfotanks
+	@TechRequired = kerbalized_level3_lfotanks
 }
 
 @PART[restock-fueltank-1875-1]:FINAL
@@ -218,7 +293,32 @@
 	@TechRequired = kerbalized_level4_lfotanks
 }
 
+@PART[restock-fueltank-adapter-1875-0625-1]:FINAL
+{
+	@TechRequired = kerbalized_level5_lfotanks
+}
+
+@PART[restock-fueltank-adapter-1875-125-2]:FINAL
+{
+	@TechRequired = kerbalized_level5_lfotanks
+}
+
+@PART[restock-fueltank-adapter-1875-125-1]:FINAL
+{
+	@TechRequired = kerbalized_level5_lfotanks
+}
+
+@PART[restock-fueltank-sphere-1875-1]:FINAL
+{
+	@TechRequired = kerbalized_level5_lfotanks
+}
+
 @PART[restock-fuel-tank-rcs-radial-tiny-1]:FINAL
 {
 	@TechRequired = kerbalized_level1_rcs
+}
+
+@PART[restock-fuel-tank-rcs-1875-1]:FINAL
+{
+	@TechRequired = kerbalized_level3_rcs
 }
