--- a/GameData/KerbalizedTechTree/Compatibility/Squad/TechRequired.cfg
+++ b/GameData/KerbalizedTechTree/Compatibility/Squad/TechRequired.cfg
@@ -65,6 +65,11 @@
 	@TechRequired = kerbalized_level0_aerospace
 }
 
+@PART[standardNoseCone]:FINAL
+{
+	@TechRequired = kerbalized_level0_aerospace
+}
+
 @PART[elevon2]:FINAL
 {
 	@TechRequired = kerbalized_level1_aerospace
@@ -275,11 +280,6 @@
 	@TechRequired = kerbalized_level3_aerospace
 }
 
-@PART[standardNoseCone]:FINAL
-{
-	@TechRequired = kerbalized_level1_materials
-}
-
 @PART[winglet]:FINAL
 {
 	@TechRequired = kerbalized_level3_materials
@@ -352,6 +352,11 @@
 	@TechRequired = kerbalized_level1_crewedspaceflight
 }
 
+@PART[landerCabinSmall]:FINAL
+{
+	@TechRequired = kerbalized_level2_crewedspaceflight
+}
+
 // Communication
 
 @PART[SurfAntenna]:FINAL
@@ -404,6 +409,11 @@
 @PART[RCSblock_01_small]:FINAL
 {
 	@TechRequired = kerbalized_level2_rcs
+}
+
+@PART[RCSBlock_v2]:FINAL
+{
+	@TechRequired = kerbalized_level3_rcs
 }
 
 // Coupling
@@ -497,6 +507,11 @@
 	@TechRequired = kerbalized_level3_airengines
 }
 
+@PART[RAPIER]:FINAL
+{
+	@TechRequired = kerbalized_level4_airengines
+}
+
 @PART[sepMotor1]:FINAL
 {
 	@TechRequired = kerbalized_level1_rocketry
@@ -505,21 +520,6 @@
 @PART[Shrimp]:FINAL
 {
 	@TechRequired = kerbalized_level1_rocketry
-}
-
-@PART[solidBooster_sm_v2]:FINAL
-{
-	@TechRequired = kerbalized_level1_srbs
-}
-
-@PART[solidBooster_v2]:FINAL
-{
-	@TechRequired = kerbalized_level1_srbs
-}
-
-@PART[solidBooster1-1]:FINAL
-{
-	@TechRequired = kerbalized_level2_srbs
 }
 
 @PART[microEngine_v2]
@@ -562,9 +562,34 @@
 	@TechRequired = kerbalized_level5_rocketry
 }
 
+@PART[engineLargeSkipper_v2]:FINAL
+{
+	@TechRequired = kerbalized_level6_rocketry
+}
+
 @PART[omsEngine]:FINAL
 {
 	@TechRequired = kerbalized_level3_rcs
+}
+
+@PART[solidBooster_sm_v2]:FINAL
+{
+	@TechRequired = kerbalized_level1_srbs
+}
+
+@PART[solidBooster_v2]:FINAL
+{
+	@TechRequired = kerbalized_level1_srbs
+}
+
+@PART[solidBooster1-1]:FINAL
+{
+	@TechRequired = kerbalized_level2_srbs
+}
+
+@PART[MassiveBooster]:FINAL
+{
+	@TechRequired = kerbalized_level3_srbs
 }
 
 // Ground
@@ -832,6 +857,10 @@
 	@TechRequired = kerbalized_level3_materials
 }
 
+@PART[radialDecoupler2]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
 // Tanks
 
 @PART[MK1Fuselage]:FINAL
