--- a/GameData/KerbalizedTechTree/Compatibility/SquadExpansionSerenity/TechRequired.cfg
+++ b/GameData/KerbalizedTechTree/Compatibility/SquadExpansionSerenity/TechRequired.cfg
@@ -65,6 +65,16 @@
 	@TechRequired = kerbalized_level2_propengines
 }
 
+@PART[rotor_02]:FINAL
+{
+	@TechRequired = kerbalized_level2_propengines
+}
+
+@PART[rotor_02s]:FINAL
+{
+	@TechRequired = kerbalized_level2_propengines
+}
+
 @PART[RotorEngine_02]:FINAL
 {
 	@TechRequired = kerbalized_level3_propengines
@@ -86,6 +96,16 @@
 }
 
 @PART[largeHeliBlade]:FINAL
+{
+	@TechRequired = kerbalized_level3_propengines
+}
+
+@PART[rotor_03]:FINAL
+{
+	@TechRequired = kerbalized_level3_propengines
+}
+
+@PART[rotor_03s]:FINAL
 {
 	@TechRequired = kerbalized_level3_propengines
 }
