--- a/GameData/KerbalizedTechTree/Tree/TechTree.cfg
+++ b/GameData/KerbalizedTechTree/Tree/TechTree.cfg
@@ -148,6 +148,25 @@
 	}
 	RDNode
 	{
+		id = kerbalized_level4_airengines
+		title = SSTO Jet Engines
+		description = 
+		cost = 180
+		hideEmpty = False
+		nodeName = kerbalized_level4_airengines
+		anyToUnlock = False
+		icon = RDicon_start
+		pos = -3600,1200,0
+		scale = 0.8
+		Parent
+		{
+			parentID = kerbalized_level3_airengines
+			lineFrom = LEFT
+			lineTo = RIGHT
+		}
+	}
+	RDNode
+	{
 		id = kerbalized_level1_propengines
 		title = Basic Propellors
 		description = 
@@ -748,12 +767,31 @@
 	}
 	RDNode
 	{
+		id = kerbalized_level4_materials
+		title = Interplanetary Materials
+		description =
+		cost = 180
+		hideEmpty = False
+		nodeName = kerbalized_level4_materials
+		anyToUnlock = False
+		icon = RDicon_generic
+		pos = -1000,1300,0
+		scale = 0.8
+		Parent
+		{
+			parentID = kerbalized_level3_materials
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
+	}
+	RDNode
+	{
 		id = kerbalized_level1_rcs
 		title = Initial RCS Thrusters
 		description = 
 		cost = 20
 		hideEmpty = False
-		nodeName = kerbalized_level2_rcs
+		nodeName = kerbalized_level1_rcs
 		anyToUnlock = False
 		icon = RDicon_rocketry-general
 		pos = -1800,1400,0
@@ -772,7 +810,7 @@
 		description = 
 		cost = 80
 		hideEmpty = False
-		nodeName = kerbalized_level3_rcs
+		nodeName = kerbalized_level2_rcs
 		anyToUnlock = False
 		icon = RDicon_rocketry-general
 		pos = -1400,1400,0
@@ -786,6 +824,25 @@
 		Parent
 		{
 			parentID = kerbalized_level3_materials
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
+	}
+	RDNode
+	{
+		id = kerbalized_level3_rcs
+		title = Advanced RCS Thrusters
+		description = 
+		cost = 160
+		hideEmpty = False
+		nodeName = kerbalized_level3_rcs
+		anyToUnlock = False
+		icon = RDicon_rocketry-general
+		pos = -1100,1400,0
+		scale = 0.6
+		Parent
+		{
+			parentID = kerbalized_level2_rcs
 			lineFrom = RIGHT
 			lineTo = LEFT
 		}
@@ -905,6 +962,25 @@
 	}
 	RDNode
 	{
+		id = kerbalized_level6_rocketry
+		title = Advanced Larger LFO Rockets
+		description = More 1.875m liquid-fueled rockets
+		cost = 160
+		hideEmpty = False
+		nodeName = kerbalized_level5_rocketry
+		anyToUnlock = False
+		icon = RDicon_rocketry-general
+		pos = -1100,1700,0
+		scale = 0.8
+		Parent
+		{
+			parentID = kerbalized_level5_rocketry
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
+	}
+	RDNode
+	{
 		id = kerbalized_level1_srbs
 		title = Basic SRBs
 		description =
@@ -943,6 +1019,31 @@
 		Parent
 		{
 			parentID = kerbalized_level1_srbs
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
+	}
+	RDNode
+	{
+		id = kerbalized_level3_srbs
+		title = Advanced SRBs
+		description =
+		cost = 120
+		hideEmpty = False
+		nodeName = kerbalized_level3_srbs
+		anyToUnlock = False
+		icon = RDicon_propulsionSystems
+		pos = -1400,1800,0
+		scale = 0.6
+		Parent
+		{
+			parentID = kerbalized_level2_srbs
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
+		Parent
+		{
+			parentID = kerbalized_level3_materials
 			lineFrom = RIGHT
 			lineTo = LEFT
 		}
@@ -1037,6 +1138,25 @@
 	}
 	RDNode
 	{
+		id = kerbalized_level5_lfotanks
+		title = Advanced Larger LFO Tanks
+		description = 1.875m diameter tanks
+		cost = 160
+		hideEmpty = False
+		nodeName = kerbalized_level5_lfotanks
+		anyToUnlock = False
+		icon = RDicon_fuelSystems
+		pos = -1100,1600,0
+		scale = 0.6
+		Parent
+		{
+			parentID = kerbalized_level4_lfotanks
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
+	}
+	RDNode
+	{
 		id = kerbalized_level1_landing
 		title = First Landing and Return
 		description =
@@ -1081,6 +1201,31 @@
 	}
 	RDNode
 	{
+		id = kerbalized_level3_landing
+		title = Basic Landing and Return
+		description =
+		cost = 120
+		hideEmpty = False
+		nodeName = kerbalized_level3_landing
+		anyToUnlock = False
+		icon = RDicon_landing
+		pos = -1400,1500,0
+		scale = 0.6
+		Parent
+		{
+			parentID = kerbalized_level2_landing
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
+		Parent
+		{
+			parentID = kerbalized_level3_materials
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
+	}
+	RDNode
+	{
 		id = kerbalized_level1_crewedspaceflight
 		title = First Crewed Space-flight
 		description = 
@@ -1106,6 +1251,37 @@
 		Parent
 		{
 			parentID = kerbalized_level2_landing
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
+	}
+	RDNode
+	{
+		id = kerbalized_level2_crewedspaceflight
+		title = Basic Crewed Space-flight
+		description = 
+		cost = 160
+		hideEmpty = False
+		nodeName = kerbalized_level2_crewedspaceflight
+		anyToUnlock = False
+		icon = RDicon_evaTech
+		pos = -1100,1200,0
+		scale = 0.6
+		Parent
+		{
+			parentID = kerbalized_level5_electronics
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
+		Parent
+		{
+			parentID = kerbalized_level3_landing
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
+		Parent
+		{
+			parentID = kerbalized_level1_crewedspaceflight
 			lineFrom = RIGHT
 			lineTo = LEFT
 		}
