--- a/GameData/KerbalizedTechTree/Tree/TechTree.cfg
+++ b/GameData/KerbalizedTechTree/Tree/TechTree.cfg
@@ -516,6 +516,31 @@
 	}
 	RDNode
 	{
+		id = kerbalized_level4_probes
+		title = Larger Probes
+		description =
+		cost = 120
+		hideEmpty = False
+		nodeName = kerbalized_level4_probes
+		anyToUnlock = False
+		icon = RDicon_unmannedTech
+		pos = -1200,500,0
+		scale = 0.6
+		Parent
+		{
+			parentID = kerbalized_level3_probes
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
+		Parent
+		{
+			parentID = kerbalized_level4_electronics
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
+	}
+	RDNode
+	{
 		id = kerbalized_level1_solar
 		title = First Solar Panels
 		description =
@@ -1033,7 +1058,7 @@
 		nodeName = kerbalized_level3_srbs
 		anyToUnlock = False
 		icon = RDicon_propulsionSystems
-		pos = -1400,1800,0
+		pos = -1300,1800,0
 		scale = 0.6
 		Parent
 		{
@@ -1204,7 +1229,7 @@
 		id = kerbalized_level3_landing
 		title = Basic Landing and Return
 		description =
-		cost = 120
+		cost = 80
 		hideEmpty = False
 		nodeName = kerbalized_level3_landing
 		anyToUnlock = False
