Continued configuring Making History parts, all engines configured

--- a/GameData/KerbalizedTechTree/Compatibility/SquadExpansionMakingHistory/TechRequired.cfg
+++ b/GameData/KerbalizedTechTree/Compatibility/SquadExpansionMakingHistory/TechRequired.cfg
@@ -1,33 +1,166 @@
 // Aerodynamics
 
-@PART[Size_1_5_Cone]:FINAL
+@PART[Size_1_5_Cone]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
+
+@PART[fairingSize1p5]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
+
+// Command
+
+@PART[kv1Pod]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level1_crewedspaceflight
+}
+
+@PART[Mk2Pod]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level2_crewedspaceflight
+}
+
+@PART[kv2Pod]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level2_crewedspaceflight
+}
+
+// Coupling
+
+@PART[Decoupler_1p5]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
+
+@PART[Size1p5_Strut_Decoupler]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
+
+@PART[Separator_1p5]:NEEDS[SquadExpansion/MakingHistory]:FINAL
 {
 	@TechRequired = kerbalized_level4_materials
 }
 
 // Engines
 
-@PART[LiquidEngineRV-1]:FINAL
+@PART[Pollux]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level4_srbs
+}
+
+@PART[LiquidEngineRV-1]:NEEDS[SquadExpansion/MakingHistory]:FINAL
 {
 	@TechRequired = kerbalized_level4_rocketry
 }
 
-@PART[LiquidEngineRE-I2]:FINAL
+@PART[LiquidEngineRE-I2]:NEEDS[SquadExpansion/MakingHistory]:FINAL
 {
 	@TechRequired = kerbalized_level5_rocketry
 }
 
-@PART[LiquidEngineRK-7]:FINAL
+@PART[LiquidEngineRK-7]:NEEDS[SquadExpansion/MakingHistory]:FINAL
 {
 	@TechRequired = kerbalized_level5_rocketry
 }
 
-@PART[LiquidEngineKE-1]:FINAL
+@PART[LiquidEngineLV-T91]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level5_rocketry
+}
+
+@PART[LiquidEngineKE-1]:NEEDS[SquadExpansion/MakingHistory]:FINAL
 {
 	@TechRequired = kerbalized_level6_rocketry
 }
 
-@PART[LiquidEngineRE-J10]:FINAL
+@PART[LiquidEngineRE-J10]:NEEDS[SquadExpansion/MakingHistory]:FINAL
 {
 	@TechRequired = kerbalized_level6_rocketry
+}
+
+@PART[LiquidEngineLV-TX87]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level6_rocketry
+}
+
+// Structural
+
+@PART[EnginePlate5]:NEEDS[SquadExpansion/MakingHistory]:FINAL // For some reason the 1.25m Engine plate is referred to as "EnginePlate5"
+{
+	@TechRequired = kerbalized_level3_materials
+}
+
+@PART[Size1to0ServiceModule]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level3_materials
+}
+
+@PART[EnginePlate1p5]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
+
+@PART[ServiceModule18]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
+
+@PART[ServiceModule25]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level5_materials
+}
+
+// Tanks
+
+@PART[Size1p5_Tank_01]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level4_lfotanks
+}
+
+@PART[Size1p5_Tank_02]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level4_lfotanks
+}
+
+@PART[Size1p5_Tank_03]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level4_lfotanks
+}
+
+@PART[Size1p5_Tank_04]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level4_lfotanks
+}
+
+@PART[Size1p5_Tank_05]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level4_lfotanks
+}
+
+@PART[Size1p5_Size0_Adapter_01]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level5_lfotanks
+}
+
+@PART[Size1p5_Size1_Adapter_01]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level5_lfotanks
+}
+
+@PART[Size1p5_Size1_Adapter_02]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level5_lfotanks
+}
+
+@PART[Size1p5_Size2_Adapter_01]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level5_lfotanks
+}
+
+@PART[Size1p5_Monoprop]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level3_rcs
 }
