--- a/GameData/KerbalizedTechTree/Patches/DebugCategories.cfg
+++ b/GameData/KerbalizedTechTree/Patches/DebugCategories.cfg
@@ -1,5 +1,5 @@
 // Places all unconfigured parts in a category
-@PART:HAS[#TechRequired[kerbalized_unconfigured]]:FINAL
-{
-	@category = none
-}
+//@PART:HAS[#TechRequired[kerbalized_unconfigured]]:FINAL
+//{
+//	@category = Electrical
+//}
