--- a/GameData/KerbalizedTechTree/Tree/TechTree.cfg
+++ b/GameData/KerbalizedTechTree/Tree/TechTree.cfg
@@ -1058,7 +1058,7 @@
 		nodeName = kerbalized_level3_srbs
 		anyToUnlock = False
 		icon = RDicon_propulsionSystems
-		pos = -1300,1800,0
+		pos = -1200,1800,0
 		scale = 0.6
 		Parent
 		{
@@ -1069,6 +1069,25 @@
 		Parent
 		{
 			parentID = kerbalized_level3_materials
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
+	}
+	RDNode
+	{
+		id = kerbalized_level4_srbs
+		title = Massive SRBs
+		description =
+		cost = 240
+		hideEmpty = False
+		nodeName = kerbalized_level4_srbs
+		anyToUnlock = False
+		icon = RDicon_propulsionSystems
+		pos = -900,1800,0
+		scale = 0.6
+		Parent
+		{
+			parentID = kerbalized_level3_srbs
 			lineFrom = RIGHT
 			lineTo = LEFT
 		}
