--- a/GameData/KerbalizedTechTree/Compatibility/SquadExpansionSerenity/TechRequired.cfg
+++ b/GameData/KerbalizedTechTree/Compatibility/SquadExpansionSerenity/TechRequired.cfg
@@ -1,111 +1,111 @@
 // Aerodynamic
 
-@PART[rotor_01s]:FINAL
+@PART[rotor_01s]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level1_propengines
 }
 
-@PART[rotor_01]:FINAL
+@PART[rotor_01]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level1_propengines
 }
 
-@PART[smallPropeller]:FINAL
+@PART[smallPropeller]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level1_propengines
 }
 
-@PART[smallFanBlade]:FINAL
+@PART[smallFanBlade]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level1_propengines
 }
 
-@PART[mediumPropeller]:FINAL
+@PART[mediumPropeller]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level1_propengines
 }
 
-@PART[mediumFanBlade]:FINAL
+@PART[mediumFanBlade]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level1_propengines
 }
 
-@PART[FanShroud_01]:FINAL
+@PART[FanShroud_01]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level1_propengines
 }
 
-@PART[FanShroud_02]:FINAL
+@PART[FanShroud_02]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level1_propengines
 }
 
-@PART[noseconeVS]:FINAL
+@PART[noseconeVS]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level1_propengines
 }
 
-@PART[noseconeTiny]:FINAL
+@PART[noseconeTiny]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level1_propengines
 }
 
-@PART[FanShroud_03]:FINAL
+@PART[FanShroud_03]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level2_propengines
 }
 
-@PART[largePropeller]:FINAL
+@PART[largePropeller]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level2_propengines
 }
 
-@PART[largeFanBlade]:FINAL
+@PART[largeFanBlade]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level2_propengines
 }
 
-@PART[rotor_02]:FINAL
+@PART[rotor_02]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level2_propengines
 }
 
-@PART[rotor_02s]:FINAL
+@PART[rotor_02s]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level2_propengines
 }
 
-@PART[RotorEngine_02]:FINAL
+@PART[RotorEngine_02]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level3_propengines
 }
 
-@PART[RotorEngine_03]:FINAL
+@PART[RotorEngine_03]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level3_propengines
 }
 
-@PART[smallHeliBlade]:FINAL
+@PART[smallHeliBlade]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level3_propengines
 }
 
-@PART[mediumHeliBlade]:FINAL
+@PART[mediumHeliBlade]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level3_propengines
 }
 
-@PART[largeHeliBlade]:FINAL
+@PART[largeHeliBlade]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level3_propengines
 }
 
-@PART[rotor_03]:FINAL
+@PART[rotor_03]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level3_propengines
 }
 
-@PART[rotor_03s]:FINAL
+@PART[rotor_03s]:NEEDS[SquadExpansion/Serenity]:FINAL
 {
 	@TechRequired = kerbalized_level3_propengines
 }
