--- a/GameData/KerbalizedTechTree/Compatibility/ReStockPlus/TechRequired.cfg
+++ b/GameData/KerbalizedTechTree/Compatibility/ReStockPlus/TechRequired.cfg
@@ -157,6 +157,13 @@
 	@TechRequired = kerbalized_level1_crewedspaceflight
 }
 
+// Heat
+
+@PART[restock-heatshield-1875-1]:FINAL
+{
+	@TechRequired = kerbalized_level3_landing
+}
+
 // Science
 
 @PART[restock-goocanister-625-1]:FINAL
