--- a/GameData/KerbalizedTechTree/Compatibility/Squad/TechRequired.cfg
+++ b/GameData/KerbalizedTechTree/Compatibility/Squad/TechRequired.cfg
@@ -614,6 +614,13 @@
 	@TechRequired = kerbalized_level2_aerospace
 }
 
+// Heat
+
+@PART[HeatShield0]:FINAL
+{
+	@TechRequired = kerbalized_level1_landing
+}
+
 // Misc
 
 @PART[flagPartSize0]:FINAL
@@ -632,11 +639,6 @@
 }
 
 @PART[miniLandingLeg]:FINAL
-{
-	@TechRequired = kerbalized_level1_landing
-}
-
-@PART[HeatShield0]:FINAL
 {
 	@TechRequired = kerbalized_level1_landing
 }
