--- a/GameData/KerbalizedTechTree/Compatibility/SquadExpansionMakingHistory/TechRequired.cfg
+++ b/GameData/KerbalizedTechTree/Compatibility/SquadExpansionMakingHistory/TechRequired.cfg
@@ -88,6 +88,11 @@
 
 // Structural
 
+@PART[Tube1]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level3_materials
+}
+
 @PART[EnginePlate5]:NEEDS[SquadExpansion/MakingHistory]:FINAL // For some reason the 1.25m Engine plate is referred to as "EnginePlate5"
 {
 	@TechRequired = kerbalized_level3_materials
@@ -104,6 +109,11 @@
 }
 
 @PART[ServiceModule18]:NEEDS[SquadExpansion/MakingHistory]:FINAL
+{
+	@TechRequired = kerbalized_level4_materials
+}
+
+@PART[Tube1p5]:NEEDS[SquadExpansion/MakingHistory]:FINAL
 {
 	@TechRequired = kerbalized_level4_materials
 }
